fix: checking on mobile

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,7 @@
 .profile__edit-button {
   background-color: #000000;
-  box-sizing: border-box;
-  border: 1px solid #FFFFFF;
+  /* box-sizing: border-box; */
+  /* border: 1px solid #FFFFFF; */
   background-image: url("../../../images/edit_button.svg");
   background-repeat: no-repeat;
   background-position: center;
